# p4-infra

./: README.md  WORKSPACE.bazel  install_dependencies.sh  p4_infra_deps.bzl
.github/workflows/: ci.yml
netaddr/: BUILD.bazel  ipv4_address.cc  ipv4_address.h  ipv4_address_and_network_address_test.cc  ipv6_address.cc  ipv6_address.h  ipv6_address_test.cc  mac_address.cc  mac_address.h  mac_address_test.cc  network_address.h
p4_pdpi/: BUILD.bazel  annotation_parser.cc  annotation_parser.h  annotation_parser_test.cc  built_ins.cc  built_ins.h  built_ins_test.cc  entity_keys.cc  entity_keys.h  entity_keys_test.cc  helper_function_test.cc  ir.cc  ir.h  ir_properties.h  ir_properties_test.cc  ir_tools.h  ir_tools_test.cc  ir_utils.cc  ir_utils.h  ir_utils_test.cc  names.h  names_test.cc  p4_runtime_client_interceptor.cc  p4_runtime_client_interceptor.h  p4_runtime_client_interceptor_test.cc  p4_runtime_matchers.h  p4_runtime_matchers_test.cc  p4_runtime_session.cc  p4_runtime_session.h  p4_runtime_session_extras.cc  p4_runtime_session_extras.h  p4_runtime_session_extras_test.cc  p4_runtime_session_mocking.cc  p4_runtime_session_mocking.h  p4_runtime_session_test.cc  p4info_test_runner.cc  p4info_union.cc  p4info_union_lib.cc  p4info_union_lib.h  p4info_union_test.cc  (+28 more)
p4_pdpi/internal/: ordered_map.h
p4_pdpi/netaddr/: BUILD.bazel  ipv4_address.cc  ipv4_address.h  ipv4_address_and_network_address_test.cc  ipv6_address.cc  ipv6_address.h  ipv6_address_test.cc  mac_address.cc  mac_address.h  mac_address_test.cc  network_address.h
p4_pdpi/packetlib/: BUILD.bazel  packetlib.cc  packetlib.h  packetlib_debugging_test.cc  packetlib_fuzzer_test.cc  packetlib_matchers.h  packetlib_matchers_test.cc  packetlib_test_runner.cc  packetlib_unit_test.cc
p4_pdpi/string_encodings/: BUILD.bazel  bit_string.cc  bit_string.h  bit_string_test.cc  byte_string.cc  byte_string.h  byte_string_test.cc  decimal_string.cc  decimal_string.h  decimal_string_test_runner.cc  hex_string.cc  hex_string.h  hex_string_test_runner.cc  readable_byte_string.cc  readable_byte_string.h  readable_byte_string_test.cc  safe.cc  safe.h
p4_pdpi/testing/: BUILD.bazel  mock_p4_runtime_server.h  mock_p4_runtime_server_test.cc  references_test_runner.cc  sequencing_test_runner.cc  sequencing_util_test_runner.cc  table_entry_gunit_test.cc  table_entry_test_runner.cc  test_helper.h  test_p4info.cc  test_p4info.h
p4_pdpi/utils/: BUILD.bazel  annotation_parser.cc  annotation_parser.h  annotation_parser_test.cc  ir.cc  ir.h  ir_test.cc
packetlib/: BUILD.bazel  bit_widths.h  packetlib.cc  packetlib.h  packetlib.proto  packetlib_debugging_test.cc  packetlib_fuzzer_test.cc  packetlib_matchers.h  packetlib_matchers_test.cc  packetlib_test_runner.cc  packetlib_unit_test.cc
string_encodings/: BUILD.bazel  bit_string.cc  bit_string.h  bit_string_test.cc  byte_string.cc  byte_string.h  byte_string_test.cc  decimal_string.cc  decimal_string.h  decimal_string_test_runner.cc  hex_string.cc  hex_string.h  hex_string_test_runner.cc  readable_byte_string.cc  readable_byte_string.h  readable_byte_string_test.cc  safe.cc  safe.h
